# HP-Motor

./: .gitignore  README.md  app.py  hp_report.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  streamlit_app.py
.github/workflows/: ci.yml  main.yml  registry_audit.yml  release-reports.yml
HP-Motor-main/canon/: index.yaml
apps_streamlit/: app.py  hp_motor_app.py
canon/: football_ontology.json  index.yaml  platform_mappings.json
canon/mappings/: platform_mappings.json
canon/ontology/: football_ontology.json  metric_ontology.json
canon/registry/: registry.json
config/: capabilities.yaml
engine/: orchestrator.py  processor.py  registry.py  registry_manager.py  validator.py
github/workflows/: registry_audit.yml
hp_motor/: cli.py  pipeline.py
hp_motor/data/: data_inventory.csv
hp_motor/diagnostics/: inventory.py
hp_motor/ingestion/: normalizers.py
hp_motor/metrics/: factory.py
hp_motor/ontology/: layers.yaml  mechanisms.yaml  phases.yaml  scenarios.yaml
hp_motor/pipeline/: run_pipeline.py
hp_motor/report/: generator.py
hp_motor/segmentation/: phase_tagger.py  set_piece_state.py
src/core/: canonical.py
src/engine/: analyst.py  behavioral_engine.py  factory.yaml  master_registry.py  processor.py  valuation.py
src/hp_motor/agents/: sovereign_agent.py
src/narrative/: archetypes.py  persona_factory.py  persona_surface.py
tests/: test_smoke_imports.py
tools/: import_drive_bundle.py  momentum_city_gs.py  release_reports.sh  scorecard.py
tools/copilot_sdk_agent/: README.md  prompts.py
(+58 files in other folders)
