[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hp-motor"
version = "0.1.0"
description = "HP Motor - registry-driven, canonical football analysis engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit",
  "pandas",
  "numpy",
  "pydantic",
  "matplotlib",
  "mplsoccer",
  "seaborn",
  "openpyxl",
  "pyyaml",
  "lxml",
  "pypdf",
  "python-docx",
  "beautifulsoup4",
  "html5lib",
]

[project.optional-dependencies]
dev = ["pytest", "rich", "pyyaml"]
agent = ["github-copilot-sdk"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hp_motor*"]